# pytorch-GAN-timeseries

./: .gitignore  README.md  dataset.py  finetune_model.py  generate_dataset.py  main.py  main_cgan.py  pyproject.toml  utils.py
experiment/: attention-rnn.ipynb  rnn.ipynb
