[project]
name = "pytorch-gan-timeseries"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib==3.9.0",
    "numpy>=2.1.0",
    "pandas>=2.3.1",
    "tensorboardx>=2.6.4",
    "tensorflow>=2.19.0",
    "torch>=2.7.1",
    "torchvision>=0.22.1",
    "yfinance>=0.2.65",
]
